Markdown: fix overflow width size on inline code when input too long text

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -2,6 +2,7 @@
 .markdown-wrap {
   font-size: 14px;
   clear: both;
+  overflow:auto;
   
   a {
       color:#4183c4;
